@@ -218,9 +218,8 @@ function imagepicker_upload_form_validate($form_id, $form_values) {
  * Submit form
  */
 function imagepicker_upload_form_submit($form_id, $form_values) {
-  global $user;
-
-  if (t('Upload') == $form_values['op']) {
+  if ($form_values['op'] == t('Upload')) {
+    global $user;
     $destination = imagepicker_get_path(false, true);
     $thumbsdir = $destination .'thumbs';
     $browserdir = $destination .'browser';
@@ -261,7 +260,7 @@ function imagepicker_upload_form_submit($form_id, $form_values) {
           $description = htmlspecialchars($form_values['description']);
           if (db_query("INSERT INTO {imagepicker} (img_id, uid, img_name, img_title, img_description) VALUES ('%d', '%d', '%s', '%s', '%s')", array($nextimgid, $user->uid, $file, $title, $description))) {
             drupal_set_message(t('Image was successfully uploaded.'));
-            drupal_goto('imagepicker/browse/'. $nextimgid, null, null, 302);
+            drupal_goto('imagepicker/browse/'. $nextimgid);
           }
           else {
             file_delete($thumbsdir . $file);
@@ -282,13 +281,12 @@ function imagepicker_upload_form_submit($form_id, $form_values) {
         }
       }
       file_delete($destination . $file);
-      drupal_goto('imagepicker', null, null, 302);
     }
     else {
       drupal_set_message(t('Unable to create a directory structure for your images.'), 'error');
-      drupal_goto('imagepicker', null, null, 302);
     }
   }
+  drupal_goto('imagepicker');
 }
 
 function imagepicker_get_path($url = false, $userdir = false) {
@@ -491,16 +489,18 @@ function imagepicker_image_select() {
 function imagepicker_image_form() {
   $showoptions = array('full' => t('Full size'), 'thumb' => t('Thumbnail'), 'title' => t('Title'));
   $linkoptions = array('none' => t('None'), 'file' => t('File'), 'page' => t('Page'));
-  $alignoptions = array('none' => t('None'), 'fleft' => t('Float Left'), 'fright' => t('Float right'));
-  $form['align'] = array(
-    '#type' => 'radios',
-    '#title' => t('Align'),
-    '#default_value' => 'none',
-    '#options' => $alignoptions,
-    '#description' => '',
-    '#prefix' => '<div class="imgp_img_options">',
-    '#suffix' => '</div>'
-  );
+  if (variable_get('imagepicker_default_align_show', 1)) {
+    $alignoptions = array('none' => t('None'), 'fleft' => t('Float Left'), 'fright' => t('Float right'));
+    $form['align'] = array(
+      '#type' => 'radios',
+      '#title' => t('Align'),
+      '#default_value' => 'none',
+      '#options' => $alignoptions,
+      '#description' => '',
+      '#prefix' => '<div class="imgp_img_options">',
+      '#suffix' => '</div>'
+    );
+  }
   $form['show'] = array(
     '#type' => 'radios',
     '#id' => 'show',
@@ -645,34 +645,34 @@ function imagepicker_edit_form(&$img) {
  * Submit form
  */
 function imagepicker_edit_form_submit($form_id, $form_values) {
-  global $user;
-
-  $result = db_query_range("SELECT uid, img_name FROM {imagepicker} WHERE img_id = '%d'", arg(2), 0, 1);
-  if (db_num_rows($result)) {
-    $img = db_fetch_array($result);
-    if ($img['uid'] == $user->uid) {
-      if (t('Submit') == $form_values['op']) {
+  if ($form_values['op'] == t('Submit')) {
+    global $user;
+    $img_id = arg(2);
+    $result = db_query_range("SELECT uid, img_name FROM {imagepicker} WHERE img_id = '%d'",$img_id, 0, 1);
+    if (db_num_rows($result)) {
+      $img = db_fetch_array($result);
+      if ($img['uid'] == $user->uid) {
         $title = htmlspecialchars($form_values['title']);
         $description = htmlspecialchars($form_values['description']);
-        if (db_query("UPDATE {imagepicker} SET img_title = '%s', img_description = '%s' WHERE img_id = '%d'", array($title, $description, arg(2)))) {
+        if (db_query("UPDATE {imagepicker} SET img_title = '%s', img_description = '%s' WHERE img_id = '%d'",
+            array($title, $description, $img_id))) {
           drupal_set_message(t('Image was successfully updated.'));
+          drupal_goto('imagepicker/browse/'. $img_id);
         }
         else {
-          drupal_set_message(t('Error while updating image.'));
+          drupal_set_message(t('Error while updating image.'), 'error');
         }
-        drupal_goto('imagepicker/browse/'. $img['img_id'], null, null, 302);
+      }
+      else {
+        drupal_set_message(t('This image does not belong to you.'), 'error');
+        watchdog('imagepicker', t('User uid %d attempted to edit image belonging to user uid %d'), array($user->uid, $img['uid']), WATCHDOG_WARNING);
       }
     }
     else {
-      drupal_set_message(t('This image does not belong to you.'), 'error');
-      watchdog('imagepicker', t('User uid %d attempted to edit image belonging to user uid %d'), array($user->uid, $img['uid']), WATCHDOG_WARNING);
+      drupal_set_message(t('Image not found.'), 'error');
     }
   }
-  else {
-    drupal_set_message(t('Image  not found.'), 'error');
-  }
-
-  drupal_goto('imagepicker/browse/'. arg(2), null, null, 302);
+  drupal_goto('imagepicker/browse');
 }
 
 /**
@@ -706,7 +706,7 @@ function imagepicker_image_page() {
     }
   }
   else {
-    drupal_set_message(t('Image  not found.'), 'error');
+    drupal_set_message(t('Image not found.'), 'error');
     $content = '';
   }
 
@@ -739,7 +739,7 @@ function imagepicker_strip_messages($msg) {
 
 function imagepicker_js($img) {
 
-  return "
+  $ret = "
   function imagepickerInsert(button) {
     // Get the form element
     var imgpForm = document.getElementById('imagepicker-image-form');
@@ -770,6 +770,9 @@ function imagepicker_js($img) {
           var imgpLink = imgpForm.link[i].value
         }
       }
+";
+  if (variable_get('imagepicker_default_align_show', 1)) {
+    $ret .= "
       // Get align value
       for (i = 0; i < imgpForm.align.length; i++) {
         if(imgpForm.align[i].checked) {
@@ -780,11 +783,11 @@ function imagepicker_js($img) {
       // Create a style for image holder
       switch (imgpAlign) {
         case 'fleft':
-          imgpImageStyle = ' style=\"float: left;\"';
+          imgpImageStyle = '". variable_get('imagepicker_default_fleft', 'style="float: left"') ."';
           break;
 
         case 'fright':
-          imgpImageStyle = ' style=\"float: right;\"';
+          imgpImageStyle = '". variable_get('imagepicker_default_fright', 'style="float: right"') ."';
           break;
 
         case 'none':
@@ -792,7 +795,14 @@ function imagepicker_js($img) {
           imgpImageStyle = '';
           break;
       }
-
+";
+  }
+  else {
+    $ret .= "
+      imgpImageStyle = '';
+";
+  }
+  $ret .= "
       switch (imgpShow) {
         case 'full': imgpImagePath = imgpFileLink; break;
         case 'title': imgpImagePath = ''; break;
@@ -873,7 +883,8 @@ function imagepicker_js($img) {
       myField.value += myValue;
     }
   }
-  ";
+";
+  return $ret;
 }
 
 /**
@@ -937,6 +948,38 @@ function imagepicker_settings() {
     '#default_value' => variable_get('imagepicker_default_pagelink', 1),
     '#description' => t('Setting this option will add a link back to the thumbnail when using the page option. Uses javascript history(back).'),
   );
+  // alignment settings
+  $form['imagepicker_align'] = array(
+    '#type' => 'fieldset',
+    '#title' => t('Image alignment settings'),
+    '#collapsible' => TRUE,
+    '#collapsed' => FALSE,
+  );
+  $form['imagepicker_align']['imagepicker_default_align_show'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Show Alignment options'),
+    '#return_value' => 1,
+    '#default_value' => variable_get('imagepicker_default_align_show', 1),
+    '#description' => t('Unsetting this option will remove the alignment options from the insert page.'),
+  );
+  $form['imagepicker_align']['imagepicker_default_fleft'] = array(
+    '#type' => 'textfield',
+    '#title' => t('Default Float left code'),
+    '#size' => 25,
+    '#maxlength' => 50,
+    '#required' => TRUE,
+    '#default_value' => variable_get('imagepicker_default_fleft', 'style="float: left"'),
+    '#description' => t('Configure the default code used for float left styling.'),
+  );
+  $form['imagepicker_align']['imagepicker_default_fright'] = array(
+    '#type' => 'textfield',
+    '#title' => t('Default Float right code'),
+    '#size' => 25,
+    '#maxlength' => 50,
+    '#required' => TRUE,
+    '#default_value' => variable_get('imagepicker_default_fright', 'style="float: right"'),
+    '#description' => t('Configure the default code used for float right styling.'),
+  );
   // advanced settings
   $form['imagepicker_advanced'] = array(
     '#type' => 'fieldset',
@@ -982,7 +1025,7 @@ function imagepicker_settings() {
     '#title' => t('Fieldset state'),
     '#return_value' => 1,
     '#default_value' => variable_get('imagepicker_advanced_collapsed', 0),
-    '#description' => t('Setting this option will collapse the fieldset the iframe is in by default.'),
+    '#description' => t('Setting this option will collapse the fieldset that the iframe is in by default.'),
   );
 
   return system_settings_form($form);
@@ -1007,6 +1050,12 @@ function imagepicker_settings_validate($form_id, $form_values) {
   if (strlen($form_values['imagepicker_default_scale']) && ! is_numeric($form_values['imagepicker_default_scale'])) {
     form_set_error('imagepicker_default_scale', t('The Scale field must be a number'));
   }
+  if (! strlen($form_values['imagepicker_default_fleft'])) {
+    form_set_error('imagepicker_default_fleft', t('You must fill in the Left alignment field'));
+  }
+  if (! strlen($form_values['imagepicker_default_fright'])) {
+    form_set_error('imagepicker_default_fright', t('You must fill in the Right alignment field'));
+  }
   if (! is_numeric($form_values['imagepicker_advanced_iframe_height'])) {
     form_set_error('imagepicker_advanced_iframe_height', t('The Iframe height must be a number'));
   }
@@ -1017,3 +1066,4 @@ function imagepicker_settings_validate($form_id, $form_values) {
     form_set_error('imagepicker_advanced_iframe_border', t('You must fill in the Iframe border'));
   }
 }
+
